--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "hexlet-js",
   "version": "1.0.0",
   "description": "JS Мой первый проект на Хекслете",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-"type": "module",
-   "test": "echo \"Error: no test specified\" && exit 1"
+    "type": "module",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/derban7ikus/hexlet-js/issues"
   },
-  "homepage": "https://github.com/derban7ikus/hexlet-js#readme"
+  "homepage": "https://github.com/derban7ikus/hexlet-js#readme",
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
