--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
     "prettier": "^2.4.1"
   }
 }
